# harmony

./: .gitignore  Readme.md  app.py  notes.md  pyproject.toml
mcp/github_mcp/: README.md  app.py  app1.py  pyproject.toml  t.py
mcp/simple_mcp/: mcp_client.py  mcp_client_test.py  mcp_server.py
text_assitants/: agentic_transformer_chatbot.py  pyproject.toml  simple_ollama_assitant.py
text_assitants/templates/: index.html
