[project]
name = "harmony"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "chromadb>=1.0.12",
    "dill<0.3.8",
    "fastmcp>=2.9.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "gradio>=5.31.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-mcp-tools>=0.2.8",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.1",
    "mcp>=1.10.1",
    "ollama>=0.4.8",
    "openvino>=2025.1.0",
    "optimum>=1.26.1",
    "optimum-intel>=1.15.0",
    "pip>=25.1.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pypdf>=5.5.0",
    "pyserial>=3.5",
    "tensorflow>=2.19.0",
    "transformers>=4.52.3",
]
